compiler/internal/frontend/testdata/parser/negative/match.tetra
func main() -> Int:
    match value:
    case Option.some(x):
        return x
